--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shashwat0310.github.io/My-portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -21,9 +22,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d build",
     "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
